# akasa-corridor-agent

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  logging.py
app/sdk_agent/: __init__.py  agent.py  api.py
app/sdk_agent/memory/: __init__.py  job_memory.py
app/sdk_agent/orchestrator/: __init__.py  orchestrator.py  templates.py
app/sdk_agent/tools/: executor.py  registry.py
app/sdk_agent/tools/compliance/: __init__.py  ledger_tools.py
app/sdk_agent/tools/corridor/: __init__.py  management.py
configs/agents/: compliance_recorder.yaml  corridor_designer.yaml  flight_guardian.yaml  orchestrator.yaml  sdk_agent.yaml
docs/: ARCHITECTURE.md  DASHBOARD_FEATURES.md  FASTAPI_MULTIAGENT_ARCHITECTURE.md  FINAL_SUMMARY.md  FRONTEND_ARCHITECTURE.md  FULL_STACK_SETUP.md  IMPLEMENTATION_COMPLETE.md  PR_SUMMARY.md  QUICK_START.md  TESTING_GUIDE.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css
frontend/src/components/: AgentPanel.tsx  Dashboard.tsx  DroneMap.tsx  EdgePanel.tsx  EventFeed.tsx  MissionControl.tsx  StatusBadge.tsx  ToolExecutor.tsx
frontend/src/hooks/: useMission.ts  useWebSocket.ts
frontend/src/store/: missionStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts  websocket.ts
tests/: test_adaptive_batch.py  test_dppm.py  test_full_mission.py  test_hierarchical_mission.py  test_multi_agent_mission.py  test_p1_learning.py  test_real_llm_flight.py  test_swarm_and_parallel.py
(+5 files in other folders)
